--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.4.0",
     "emoji-picker-react": "^4.4.11",
     "formik": "^2.4.3",
+    "lodash.clonedeep": "^4.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-input-emoji": "^5.3.1",
